# deversation

./: .coverage  LICENSE  README.md  agreement.md  pyproject.toml  requirements.md
assets/: bio.txt
deversation/: README.md  pyproject.toml  requirements.md
deversation/deversation/: client.py  server.py
main/: ascii_art.py  assistant.py  auto_correct.py  banner.py  challenge.py  client.py  play.py  server.py  sounds.py  speech.py  test.txt  util.py
tests/: test_deversation.py
