[tool.poetry]
name = "deversation"
version = "0.1.0"
description = ""
authors = ["Edward Regalado <tregalado30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^1.1.0"
pyfiglet = "^0.8.post1"
SpeechRecognition = "^3.8.1"
climage = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
