[tool.poetry]
name = "deversation"
version = "0.1.0"
description = ""
authors = ["Edward Regalado <tregalado30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
termcolor = "^1.1.0"
pyfiglet = "^0.8.post1"
SpeechRecognition = "^3.8.1"
PyAudio = "^0.2.11"
playsound = "^1.3.0"
black = "^21.7b0"
climage = "^0.1.3"
pyttsx3 = "^2.90"
pyjokes = "^0.6.0"
DateTime = "^4.3"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
